@@ -1,14 +1,20 @@
 package com.flemmli97.fatemod.common.entity.servant;
 
+
 import org.apache.commons.lang3.tuple.Pair;
 
+import com.flemmli97.fatemod.common.entity.EntityCasterCircle;
 import com.flemmli97.fatemod.common.entity.EntityMagicBeam;
 import com.flemmli97.fatemod.common.entity.servant.ai.EntityAIMedea;
+import com.flemmli97.fatemod.common.handler.ConfigHandler;
 import com.flemmli97.fatemod.common.init.ModItems;
+import com.google.common.base.Predicate;
 
 import net.minecraft.entity.EntityLivingBase;
 import net.minecraft.inventory.EntityEquipmentSlot;
 import net.minecraft.item.ItemStack;
+import net.minecraft.potion.Potion;
+import net.minecraft.potion.PotionEffect;
 import net.minecraft.util.DamageSource;
 import net.minecraft.world.DifficultyInstance;
 import net.minecraft.world.World;
@@ -18,7 +24,13 @@ public class EntityMedea extends EntityServant implements IRanged{
 	EntityAIMedea attackAI = new EntityAIMedea(this);
 	
 	private boolean rangedAttack;
+	private final Predicate<EntityCasterCircle> circlePred = new Predicate<EntityCasterCircle>() {
 
+		@Override
+		public boolean apply(EntityCasterCircle circle) {
+			return circle.getOwner()!=null && circle.getOwner()==EntityMedea.this;
+		}};
+	
 	public EntityMedea(World world) {
 		super(world, EnumServantType.CASTER, "Rule Breaker", new ItemStack[] {new ItemStack(ModItems.staff)});
 		this.tasks.addTask(1, attackAI);
@@ -57,6 +69,22 @@ public class EntityMedea extends EntityServant implements IRanged{
 		}
     }
 	
+	@Override
+	public void onLivingUpdate() {
+		super.onLivingUpdate();
+		for(EntityCasterCircle e : this.world.getEntitiesWithinAABB(EntityCasterCircle.class, this.getEntityBoundingBox().grow(ConfigHandler.medeaCircleRange), circlePred))
+			if(e.getDistanceSq(this.posX, e.posY, this.posZ)<=ConfigHandler.medeaCircleRange*ConfigHandler.medeaCircleRange)
+				this.buff();
+	}
+	
+	private void buff()
+	{
+		this.addPotionEffect(new PotionEffect(Potion.getPotionFromResourceLocation("minecraft:resistance"), 1, 2, true, false));
+		if(!this.isPotionActive(Potion.getPotionFromResourceLocation("minecraft:regeneration")))
+			this.addPotionEffect(new PotionEffect(Potion.getPotionFromResourceLocation("minecraft:regeneration"), 4, 1, true, false));
+		this.addPotionEffect(new PotionEffect(Potion.getPotionFromResourceLocation("minecraft:strength"), 1, 2, true, false));
+	}
+	
 	public void attackWithNP()
 	{
 
@@ -64,10 +92,22 @@ public class EntityMedea extends EntityServant implements IRanged{
 
 	@Override
 	public void attackWithRangedAttack(EntityLivingBase target) {
-		EntityMagicBeam beam = new EntityMagicBeam(this.world, this, target);
+		int strength = 0;
+		PotionEffect eff = this.getActivePotionEffect(Potion.getPotionFromResourceLocation("minecraft:strength"));
+		if(eff!=null)
+			strength = eff.getAmplifier();
+		EntityMagicBeam beam = new EntityMagicBeam(this.world, this, target, strength);
 		//beam.setProjectileAreaPosition(3);
 		this.world.spawnEntity(beam);
 		this.revealServant();
+	}
+	
+	public void makeCircle()
+	{
+		if(!this.world.isRemote)
+		{
+			this.world.spawnEntity(new EntityCasterCircle(this.world, this, ConfigHandler.medeaCircleRange));
+		}
 	}
 
 	@Override
