@@ -1,4 +1,13 @@
- Fate UBW a0.3.0
+Fate UBW a0.3.1
+=============
+- Added model for gilles tentacle monster
+- Fixed sasaki not attacking
+- Made sasaki invincible during np
+- WIP animation for babylon rings
+- Medea can place a magic circle which empowers her (strength, regen, resistance)
+- Lancelot has a chance to reflect back projectiles
+
+Fate UBW a0.3.0
 ==============
 - Made servants load the chunk they are in
 - Improved hassans code
